--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
         "axios": "^1.7.9",
+        "electron-store": "^11.0.2",
         "electron-updater": "^6.1.7",
         "socket.io-client": "^4.8.1"
     },
@@ -33,14 +34,14 @@
         "@electron-toolkit/eslint-config": "^1.0.2",
         "@electron-toolkit/eslint-config-prettier": "^2.0.0",
         "@vitejs/plugin-react": "^4.3.1",
-        "electron": "^31.0.2",
+        "electron": "^38.2.2",
         "electron-builder": "^24.13.3",
-        "electron-vite": "^2.3.0",
+        "electron-vite": "^4.0.0",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.3",
         "prettier": "^3.3.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "vite": "^5.3.1"
+        "vite": "^7.1.3"
     }
 }
