--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
+        "@reduxjs/toolkit": "^2.10.1",
         "axios": "^1.7.9",
         "electron-store": "^11.0.2",
         "electron-updater": "^6.1.7",
         "react-markdown": "^10.1.0",
+        "react-redux": "^9.2.0",
         "rehype-autolink-headings": "^7.1.0",
         "remark-gfm": "^4.0.1",
         "remark-slug": "^7.0.1",
@@ -38,7 +40,7 @@
     "devDependencies": {
         "@electron-toolkit/eslint-config": "^1.0.2",
         "@electron-toolkit/eslint-config-prettier": "^2.0.0",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@vitejs/plugin-react": "^5.1.1",
         "electron": "^38.2.2",
         "electron-builder": "^24.13.3",
         "electron-vite": "^4.0.0",
